fix: improve blockquote text readability in light mode by adjusting text color

--- a/src/style.css
+++ b/src/style.css
@@ -81,8 +81,8 @@
   blockquote {
     color: var(--color-blue);
     border-inline-start-color: var(--color-base03);
-    font-style: normal
-    & p { color: var(--color-base04) }
+    font-style: normal;
+    & p { color: var(--color-white) }
   }
 
   pre {
